--- a/BRIDGE-MITHIC.ipynb
+++ b/BRIDGE-MITHIC.ipynb
@@ -25,36 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1acaf1e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8a885624",
-   "metadata": {},
-   "source": [
-    "## Import Libraries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "f40e2aab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import json\n",
-    "from typing import Any\n",
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff9644b6",
+   "id": "1c0a5de4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -64,7 +35,7 @@
    "id": "55405afe",
    "metadata": {},
    "source": [
-    "## Download and extract the dataset"
+    "## Download and organize files"
    ]
   },
   {
@@ -132,6 +103,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d68e264d",
+   "metadata": {},
+   "source": [
+    "## Import Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b0ad743",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "from typing import Any\n",
+    "from pathlib import Path"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,48 +247,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9891a09c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "task: BrainMRI-AIS\n",
-      "\n",
-      "language: en\n",
-      "\n",
-      "task type: Text Classification\n",
-      "\n",
-      "id: 1661\n",
-      "\n",
-      "split: train\n",
-      "\n",
-      "instruction: Given a brain Magnetic Resonance Imaging (MRI) radiology report, determine whether the patient has acute ischemic stroke (AIS).\n",
-      "Return your answer in the following format. DO NOT GIVE ANY EXPLANATION:\n",
-      "AIS: label\n",
-      "The optional list for \"label\" is [\"Yes\", \"No\"].\n",
-      "\n",
-      "input: Unremarkable finding of brain parenchyma and cerebrospinal fluid space.\n",
-      "magnetic resonance angiography: No gross abnormal finding.\n",
-      "\n",
-      "output: AIS: No\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# A whole data from example\n",
-    "idx = 1\n",
-    "example_one = task_data[\"example\"][idx]\n",
-    "for key, value in example_one.items():\n",
-    "    print(f\"{key}: {value.strip() if isinstance(value, str) else value}\")\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "8de1d44e",
    "metadata": {},
@@ -334,6 +284,48 @@
     "idx = 1\n",
     "test_one = task_data[\"test\"][idx]\n",
     "for key, value in test_one.items():\n",
+    "    print(f\"{key}: {value.strip() if isinstance(value, str) else value}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "965ab3df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "task: BrainMRI-AIS\n",
+      "\n",
+      "language: en\n",
+      "\n",
+      "task type: Text Classification\n",
+      "\n",
+      "id: 1661\n",
+      "\n",
+      "split: train\n",
+      "\n",
+      "instruction: Given a brain Magnetic Resonance Imaging (MRI) radiology report, determine whether the patient has acute ischemic stroke (AIS).\n",
+      "Return your answer in the following format. DO NOT GIVE ANY EXPLANATION:\n",
+      "AIS: label\n",
+      "The optional list for \"label\" is [\"Yes\", \"No\"].\n",
+      "\n",
+      "input: Unremarkable finding of brain parenchyma and cerebrospinal fluid space.\n",
+      "magnetic resonance angiography: No gross abnormal finding.\n",
+      "\n",
+      "output: AIS: No\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A whole data from example\n",
+    "idx = 1\n",
+    "example_one = task_data[\"example\"][idx]\n",
+    "for key, value in example_one.items():\n",
     "    print(f\"{key}: {value.strip() if isinstance(value, str) else value}\")\n",
     "    print()"
    ]
